# nova-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  nova-engine.cabal
.github/workflows/: ci.yml
cbits/: nv_allocator.c  nv_allocator.h  nv_buffer.c  nv_buffer.h  nv_compute.c  nv_compute.h  nv_debug.c  nv_debug.h  nv_descriptor.c  nv_descriptor.h  nv_device.c  nv_device.h  nv_ffi.c  nv_ffi.h  nv_frame.c  nv_frame.h  nv_input.c  nv_input.h  nv_instance.c  nv_instance.h  nv_pipeline.c  nv_pipeline.h  nv_postprocess.c  nv_postprocess.h  nv_shadow.c  nv_shadow.h  nv_skin_pipeline.c  nv_skin_pipeline.h  nv_stb_image.c  nv_swapchain.c  nv_swapchain.h  nv_terrain.c  nv_terrain.h  nv_texture.c  nv_texture.h  nv_util.c  nv_util.h  nv_vma.cpp  nv_vma.h  nv_window.c  (+1 more)
shaders/: bloom_downsample.frag  bloom_downsample.frag.spv  bloom_upsample.frag  bloom_upsample.frag.spv  debug_line.vert  debug_line.vert.spv  default.frag  default.frag.spv  default.vert  default.vert.spv  fullscreen.vert  morph.comp  morph.comp.spv  pbr.frag  pbr.frag.spv  pbr.vert  pbr.vert.spv  pbr_skinned.vert  pbr_skinned.vert.spv  shadow.vert  shadow.vert.spv  shadow_skinned.vert  shadow_skinned.vert.spv  terrain.frag  terrain.frag.spv  terrain.vert  terrain.vert.spv  textured.frag  textured.frag.spv  tonemap.frag  tonemap.frag.spv
src/: NovaEngine.hs
src-ffi/NovaEngine/Render/: Buffer.hs  Descriptor.hs  Device.hs  Frame.hs  Instance.hs  Material.hs  Pipeline.hs  PostProcess.hs  Skin.hs  Swapchain.hs  Terrain.hs  Texture.hs  Window.hs
src/NovaEngine/: Debug.hs  Input.hs  Noise.hs  SDF.hs  Scene.hs  Terrain.hs
src/NovaEngine/Animation/: Animate.hs  IK.hs  Morph.hs  Pose.hs  Skeleton.hs  Skin.hs
src/NovaEngine/Input/: ActionMap.hs
src/NovaEngine/Math/: Matrix.hs  Quaternion.hs  Types.hs  Vector.hs
src/NovaEngine/Mesh/: Boolean.hs  Buffer.hs  Combine.hs  Curve.hs  Deform.hs  Export.hs  Hull.hs  Icosphere.hs  Import.hs  LOD.hs  Loft.hs  Primitives.hs  Remesh.hs  Simplify.hs  Smooth.hs  Subdivision.hs  Surface.hs  Symmetry.hs  Types.hs  UV.hs  Weld.hs
src/NovaEngine/Physics/: EPA.hs  GJK.hs  Shapes.hs  Solver.hs
src/NovaEngine/Render/: Allocator.hs  Buffer.hs  Compute.hs  Device.hs  Frame.hs  Material.hs  Pipeline.hs  Shadow.hs  Skin.hs  SkinPipeline.hs  Swapchain.hs  Texture.hs  Types.hs
src/NovaEngine/SDF/: DualContour.hs  Isosurface.hs
src/NovaEngine/Scene/: Camera.hs  FrameUBO.hs  Shadow.hs
src/NovaEngine/Spatial/: Raycast.hs
src/NovaEngine/Terrain/: Scatter.hs
test/: Main.hs
