cabal-version:      3.4
name:               nova-engine
version:            0.1.0.0
synopsis:           3D graphics engine — C99 Vulkan + SDL2 hot path, Haskell brain
description:
  A general-purpose 3D graphics engine. C99 hot path (Vulkan rendering,
  SDL2 windowing, command recording, buffer management) for maximum
  performance. Haskell brain (mesh generation, skeletal animation,
  terrain, frame orchestration) for correct-by-construction logic.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Devon Tomlin, Kyle Jensen
maintainer:         devon.tomlin@novavero.ai
homepage:           https://github.com/Novavero-AI/nova-engine
bug-reports:        https://github.com/Novavero-AI/nova-engine/issues
category:           Graphics, Game
stability:          experimental
build-type:         Simple
tested-with:        GHC == 9.8.4
extra-doc-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
    NovaEngine
    NovaEngine.Math.Types
    NovaEngine.Math.Vector
    NovaEngine.Math.Matrix
    NovaEngine.Math.Quaternion

  c-sources:
    cbits/nv_ffi.c

  include-dirs:     cbits
  cc-options:       -std=c99 -Wall -Wextra -Wpedantic -Werror

  -- System libraries added when render subsystem is built:
  -- if os(darwin)
  --   frameworks:     Cocoa IOKit CoreVideo
  --   extra-libraries: vulkan SDL2
  -- if os(linux)
  --   extra-libraries: vulkan SDL2
  -- if os(windows)
  --   extra-libraries: vulkan SDL2

  build-depends:
      base          >= 4.19 && < 5
    , bytestring    >= 0.11 && < 0.13
    , containers    >= 0.6  && < 0.8
    , array         >= 0.5  && < 0.6
    , text          >= 2.0  && < 2.2

  hs-source-dirs:   src
  default-language:  GHC2021
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -haddock
    -fspecialise-aggressively
    -fexpose-all-unfoldings

test-suite nova-engine-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
      base          >= 4.19 && < 5
    , nova-engine
    , QuickCheck    >= 2.14 && < 2.16
    , tasty         >= 1.4  && < 1.6
    , tasty-quickcheck >= 0.10 && < 0.12
  default-language: GHC2021
  ghc-options:      -Wall -Wcompat

source-repository head
  type:     git
  location: https://github.com/Novavero-AI/nova-engine
  branch:   main
