cabal-version:      3.4
name:               nova-engine
version:            0.3.0.0
synopsis:           3D graphics engine — C99 Vulkan + SDL3 hot path, Haskell brain
description:
  A general-purpose 3D graphics engine. C99 hot path (Vulkan rendering,
  SDL3 windowing, VMA memory management, command recording) for maximum
  performance. Haskell brain (mesh generation, skeletal animation,
  terrain, frame orchestration) for correct-by-construction logic.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Devon Tomlin
maintainer:         devon.tomlin@novavero.ai
homepage:           https://github.com/Novavero-AI/nova-engine
bug-reports:        https://github.com/Novavero-AI/nova-engine/issues
category:           Graphics, Game
stability:          experimental
build-type:         Simple
tested-with:        GHC == 9.8.4
extra-doc-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
    NovaEngine
    -- Math
    NovaEngine.Math.Types
    NovaEngine.Math.Vector
    NovaEngine.Math.Matrix
    NovaEngine.Math.Quaternion
    -- Mesh
    NovaEngine.Mesh.Types
    NovaEngine.Mesh.Buffer
    NovaEngine.Mesh.Combine
    NovaEngine.Mesh.Primitives
    NovaEngine.Mesh.Curve
    NovaEngine.Mesh.Surface
    NovaEngine.Mesh.Loft
    NovaEngine.Mesh.Icosphere
    NovaEngine.Mesh.Hull
    NovaEngine.Mesh.Deform
    NovaEngine.Mesh.Subdivision
    NovaEngine.Mesh.Smooth
    NovaEngine.Mesh.Simplify
    NovaEngine.Mesh.Weld
    NovaEngine.Mesh.Remesh
    NovaEngine.Mesh.Boolean
    NovaEngine.Mesh.Symmetry
    NovaEngine.Mesh.UV
    NovaEngine.Mesh.LOD
    NovaEngine.Mesh.Export
    NovaEngine.Mesh.Import
    -- SDF
    NovaEngine.SDF
    NovaEngine.SDF.Isosurface
    NovaEngine.SDF.DualContour
    -- Noise
    NovaEngine.Noise
    -- Terrain
    NovaEngine.Terrain
    NovaEngine.Terrain.Scatter
    -- Animation
    NovaEngine.Animation.Skeleton
    NovaEngine.Animation.Pose
    NovaEngine.Animation.Animate
    NovaEngine.Animation.IK
    NovaEngine.Animation.Skin
    NovaEngine.Animation.Morph
    -- Spatial
    NovaEngine.Spatial.Raycast
    -- Render
    NovaEngine.Render.Window
    NovaEngine.Render.Instance
    NovaEngine.Render.Device
    NovaEngine.Render.Allocator
    NovaEngine.Render.Swapchain
    NovaEngine.Render.Pipeline
    NovaEngine.Render.Buffer
    NovaEngine.Render.Frame
    NovaEngine.Render.Descriptor

  c-sources:
    cbits/nv_ffi.c
    cbits/nv_window.c
    cbits/nv_instance.c
    cbits/nv_device.c
    cbits/nv_allocator.c
    cbits/nv_swapchain.c
    cbits/nv_pipeline.c
    cbits/nv_buffer.c
    cbits/nv_frame.c
    cbits/nv_descriptor.c

  cxx-sources:      cbits/nv_vma.cpp
  cxx-options:      -std=c++14 -w

  include-dirs:     cbits
  cc-options:       -std=c99 -Wall -Wextra -Wpedantic -Werror
  extra-libraries:  stdc++
  pkgconfig-depends: sdl3, vulkan

  build-depends:
      base          >= 4.19 && < 5
    , bytestring    >= 0.11 && < 0.13
    , containers    >= 0.6  && < 0.8
    , array         >= 0.5  && < 0.6
    , text          >= 2.0  && < 2.2

  hs-source-dirs:   src
  default-language:  GHC2021
  default-extensions: StrictData
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -haddock
    -fspecialise-aggressively
    -fexpose-all-unfoldings

test-suite nova-engine-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
      base          >= 4.19 && < 5
    , nova-engine
    , containers    >= 0.6  && < 0.8
    , QuickCheck    >= 2.14 && < 2.16
    , tasty         >= 1.4  && < 1.6
    , tasty-quickcheck >= 0.10 && < 0.12
  default-language: GHC2021
  default-extensions: StrictData
  ghc-options:      -Wall -Wcompat

source-repository head
  type:     git
  location: https://github.com/Novavero-AI/nova-engine
  branch:   main
